--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,15 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+import requests
+
+# Use a dummy token for testing
+token = 'dummy-token-for-testing'  # Change to the actual token when testing
+headers = {'Authorization': f'token {token}'}
+
+# Example API call to create a test issue (replace with your repo details)
+response = requests.post(
+    'https://api.github.com/repos/your-username/your-repo/issues',
+    headers=headers,
+    json={"title": "Test Issue", "body": "This is a test issue."}
+)
+
+# Print the response
+print(response.status_code, response.json())
